feat: expose acceptance operation reference